even-store-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-store-deployment
  labels:
    app: event-store
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: event-store
  template:
    metadata:
      labels:
        app: event-store
    spec:
      containers:
        - name: event-store
          image: eventstore/eventstore:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "300m"
          ports:
            - containerPort: 8080
