ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: event-store-ingress
spec:
  backend:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: event-store-service
              servicePort: 2113
